# TicTacToe

./: CMakeLists.txt  Makefile.nxdk  README.md  main.c
include/: common.h  game_logic.c  game_logic.h  graphics.c  graphics.h  input.c  input.h
tests/: Makefile  test_game_logic.c
